# llm-os

./: .gitignore  2026-01-07-alright-understand-the-project-that-we-are-workin.txt  QUICK_START.txt  README.md  launch.bat  launch.sh  llm-os-launcher.sh  pyproject.toml  run-llm-os.bat  run-llm-os.sh  test-config.yaml  verify.bat  view-logs.sh
config/: __init__.py  default.yaml  llm_config.py  mcp_config.py  security_config.py  ui_config.py
config/providers/: __init__.py  groq.py  ollama.py  openrouter.py
docs/: LOGGING.md  NEW_FEATURES.txt  README.md  TUI_USAGE.md
docs/code/: 08_API_REFERENCE.md  09_DEVELOPMENT.md  README.md
docs/deployment/: FILE_STRUCTURE.md  INSTALL.sh  README.md  SETUP_GUIDE.md
docs/planning/: 02_TECH_STACK.md  03_BASE_OS_SELECTION.md  07_BUILD_PROCESS.md
docs/project/: CLEANUP_COMPLETE.md  FINAL_CLEANUP.md  PROJECT_STRUCTURE.md  REORGANIZATION_COMPLETE.md
docs/setup/: SETUP_COMPLETE.md
docs/testing/: PATH_FIX_COMPLETE.md  TESTING_UI_ISSUE.md  UI_FIXES_COMPLETE.md
docs/workflow-docs/: 00_README.md  08_VM_SETUP_GUIDE.md  09_DEVELOPMENT_ROADMAP.md  10_MCP_SERVERS_CATALOG.md  11_FLOWCHART.md
llm_os/: pyproject.toml  requirements-dev.txt  requirements.txt
llm_os/config/: default.yaml
llm_os/docs/: 01_OVERVIEW.md  02_INSTALLATION.md  03_ARCHITECTURE.md  04_LLM_LAYER.md  05_MCP_LAYER.md  06_UI_LAYER.md  07_CONFIGURATION.md  10_FOLDER_STRUCTURE.md
llm_os/src/llm_os/: __init__.py  __main__.py  cli.py  config.py  core.py
llm_os/src/llm_os/llm/: base.py  context.py  router.py
llm_os/src/llm_os/llm/providers/: __init__.py  anthropic.py  ollama.py  openai.py
llm_os/src/llm_os/mcp/: __init__.py
llm_os/src/llm_os/mcp/client/: __init__.py
llm_os/src/llm_os/mcp/orchestrator/: __init__.py  orchestrator.py  server_manager.py
llm_os/src/llm_os/mcp/servers/: __init__.py  git.py  process.py  system.py
llm_os/src/llm_os/mcp/types/: __init__.py  server.py
llm_os/src/llm_os/ui/: __init__.py  app.py  widgets.py
llm_os/src/llm_os/utils/: __init__.py
src/llm_os/: __init__.py  cli.py  config.py  core.py  paths.py
tests/: run_tests.bat
tests/cli/: run_cli_tests.bat  test_bypass.py
tests/config/: run_config_tests.bat  test_dynamic_config.py
tests/integration/: test_groq.py  test_integration.py  test_openrouter.py  (+1 more)
workflow-docs/: 01_ABSTRACT.md  04_MCP_ARCHITECTURE.md  05_LLM_INTEGRATION.md  06_SYSTEM_ARCHITECTURE.md  12_REFERENCES.md
(+68 files in other folders)
