[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-os"
version = "0.1.0"
description = "Natural Language Operating System - Control your computer with natural language"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "LLM-OS Team"}
]
keywords = ["llm", "os", "natural-language", "mcp", "ai", "assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Operating System",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "textual>=0.47.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "ollama>=0.3.0",
    "aiofiles>=23.2.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
    "types-aiofiles>=23.2.0",
]

[project.scripts]
llm-os = "llm_os.cli:main"
llmos = "llm_os.cli:main"

[project.urls]
Homepage = "https://github.com/llm-os/llm-os"
Documentation = "https://llm-os.github.io/docs"
Repository = "https://github.com/llm-os/llm-os"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_os"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/config",
    "/tests",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
